fixed why participate image not showing

--- a/css/whyparticipate.css
+++ b/css/whyparticipate.css
@@ -134,10 +134,7 @@
       padding: 40px 0;
   }
   
-  .participate-image {
-      display: none;
-  }
-  
+    
   .participate-title {
       font-size: 1.75rem;
   }
